--- a/BrainPortal/app/views/tasks/_drmaa_spmbatch.html.erb
+++ b/BrainPortal/app/views/tasks/_drmaa_spmbatch.html.erb
@@ -150,7 +150,7 @@ function selectAllOptions(selection)
 
 	Save selections as defaults: <%= check_box_tag( :save_as_defaults, '1') %><br>
 	Save results to:
-	<%= select_tag "data_provider_id", options_for_select([["Data provider of input files", nil]] + data_providers.collect{ |p| [ p.name, p.id ] }, current_user.user_preference.data_provider_id) %><br>
+	<%= data_provider_select "data_provider_id", params[:data_provider_id], { :include_blank => "Data provider of input files" } %><br>
 	<% end %>
   </div>  <!-- End class="generalbox" -->
 </div>   <!-- End class="generalcontent" -->
