--- a/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
@@ -1,5 +1,5 @@
 <!-- 
-   Partial to be rendered for DrmaaSpmbatch.rb
+   Partial to be rendered for Spmbatch.rb
 -->
 
 <script language="JavaScript" type="text/javascript">
@@ -42,44 +42,25 @@ function selectAllOptions(selection)
 	   input.type = "hidden";
 	   input.name = "batch_files[" + i + "]";
 	   input.value = selection.options[i].value;
-       document.getElementById("spmbatch").appendChild(input);
+           document.getElementById("spmbatch").appendChild(input);
 	}
 }
 
 //-->
 </script>
 
-<div class = "generalcontent">
   <table class=userfiles>
   <tr>
   <td><h2>SPM Batch Task</h2></td>
   </tr>
   <tr>
-  <td align=left><%= render :partial => "spmbatch_howto_note"%></td>
+  <td align=left><%= render :partial => "tasks/cbrain_task/spmbatch_howto_note"%></td>
   </tr>
   </table>
-  <div class = "generalbox">
 
-	<%
-	     form_tag('/tasks/create', :id => "spmbatch") do 
-	-%>
 
-	<%= hidden_field_tag :task, 'DrmaaSpmbatch' %>
-	<%= hidden_field_tag 'bourreau_id', params[:bourreau_id] %>
-	<% params[:file_ids].each do |id| %>
-	<%= hidden_field_tag 'file_ids[]',  id %>
-	<% end %>
-
-	<h3>Description (optional)</h3><BR>
-	<%=  text_area_tag :description, nil, :cols  => 40 %><br><br>
-
-	<!--      
-	   Render form fields here.
-	   Default arguments returned by DrmaaSpmbatch.get_default_args()
-	     are stored in the hash: default_args
-	-->
-	
      <h3>Choose Batchs to submit</h3>
+
 	 <table class="userfiles">
 	 <tr>
 		<td></td>
@@ -88,7 +69,7 @@ function selectAllOptions(selection)
 	 </tr>
 	 <tr>
 	 <td>
-	 <select name="batchs_in" size="6" <%= options_for_select(default_args[:batch_files].map{|p| [p.name,p.id]})%>></select>
+	 <select name="batchs_in" size="6" <%= options_for_select(params[:batch_files].map{|p| [p.name,p.id]}) %>></select>
 	 </td>
 	 <td>
 	 <input type="button" value="=>" 
@@ -102,10 +83,12 @@ function selectAllOptions(selection)
 	 </td>
 	 <td>	
 	 <select name="batchs_out" size ="6" MULTIPLE></select>
-     </td>
-     </tr>
-     </table> 
-	 <table class="userfiles">
+         </td>
+         </tr>
+         </table> 
+
+
+     <table class="userfiles">
        <tr> 
            <th>Control Options</th>
        </tr>
@@ -113,26 +96,31 @@ function selectAllOptions(selection)
          <td> 
 	       <table  border="0" class="userfiles">
 		         <td>
-			        <%= render :partial => "spmbatch_validate_note" %>
+			        <%= render :partial => "tasks/cbrain_task/spmbatch_validate_note" %>
 	             </td>
 	             <td>
-	               <%= check_box_tag( 'noValidation', value = "1", checked = false) %>     
+	               <%= check_box_tag( :noValidation.to_la, "1", params[:noValidation] ) %>     
 	             </td>
              </tr>
              <tr>
 		         <td>
-                   <%= render :partial => "spmbatch_saveall_note" %>
+                   <%= render :partial => "tasks/cbrain_task/spmbatch_saveall_note" %>
 	             <td>
-	               <%= check_box_tag( 'saveAll', value = "1", checked = false) %>     
+	               <%= check_box_tag( :saveAll.to_la, "1", params[:saveAll] ) %>     
 	             </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
+
 	<%= submit_tag 'Start Spmbatch' , :onclick => "selectAllOptions(this.form.batchs_out);" %><br><br><br>
-     <h3>Subjects found in dataset: <em><%= Userfile.find(default_args[:collection_id]).name %></em></h3>
-      <%= render :partial => "spmbatch_subjects_note" %>
+
+     <h3>Subjects found in dataset: <em><%= Userfile.find(params[:collection_id]).name %></em></h3>
+     <%= hidden_field_tag :collection_id.to_la, params[:collection_id] %>
+
+      <%= render :partial => "tasks/cbrain_task/spmbatch_subjects_note" %>
+
       <table>
          <tr>
            <th>Subjects name</th>
@@ -140,17 +128,10 @@ function selectAllOptions(selection)
            <th>Create Field Map?</th>
            <th>Clean Up?</th>
          </tr>
-         <% for file in default_args[:file_args] %>
-           <%= render :partial => 'spmbatch_subjects_from_col',  :locals  => {:file  => file} %>
+         <% for file in params[:file_args] %>
+           <%= render :partial => 'tasks/cbrain_task/spmbatch_subjects_from_col',  :locals  => {:file  => file} %>
          <% end %>
       </table>	
-	<%= submit_tag 'Start Spmbatch' , :onclick => "selectAllOptions(this.form.batchs_out);" %>
-    <br>
-    <br>
 
-	Save selections as defaults: <%= check_box_tag( :save_as_defaults, '1') %><br>
-	Save results to:
-	<%= data_provider_select "data_provider_id", params[:data_provider_id], { :include_blank => "Data provider of input files" } %><br>
-	<% end %>
-  </div>  <!-- End class="generalbox" -->
-</div>   <!-- End class="generalcontent" -->
+      <%= submit_tag 'Start Spmbatch' , :onclick => "selectAllOptions(this.form.batchs_out);" %>
+
