--- a/BrainPortal/app/views/tasks/cbrain_task/_spmbatch_subjects_from_col.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_spmbatch_subjects_from_col.html.erb
@@ -3,10 +3,10 @@
 
 <td>
   <%= h(file[:name]) %>
-  <%= hidden_field_tag 'file_args[][name]'.to_la ,file[:name] %>
+  <%= hidden_field_tag "file_args[#{idx}][name]".to_la ,file[:name] %>
 </td>
-<td><%= check_box_tag 'file_args[][exclude]'.to_la ,    "exclude"    , file[:exclude]    %></td>
-<td><%= check_box_tag 'file_args[][doFieldMap]'.to_la , "doFieldMap" , file[:doFieldMap] %></td>
-<td><%= check_box_tag 'file_args[][doCleanUP]'.to_la ,  "doCleanUP"  , file[:doCleanUP]  %></td>
+<td><%= check_box_tag "file_args[#{idx}][exclude]".to_la ,    "exclude"    , file[:exclude]    %></td>
+<td><%= check_box_tag "file_args[#{idx}][doFieldMap]".to_la , "doFieldMap" , file[:doFieldMap] %></td>
+<td><%= check_box_tag "file_args[#{idx}][doCleanUP]".to_la ,  "doCleanUP"  , file[:doCleanUP]  %></td>
 
 </tr>
