Added support for partial views for the show task page's parameters. Added the partials for all tasks. Added utility methods to log to userfiles with markups for links to the tasks that created them or used them. Added the calls to all the tasks.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@1164 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

Former-commit-id: ea8132f5f35170a740a2f8c569f0e2722d1fcc6f

--- a/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
@@ -40,9 +40,9 @@ function selectAllOptions(selection)
 	for(i=0; selection.length; i++){
 	   var input = document.createElement("input");
 	   input.type = "hidden";
-	   input.name = "batch_files[" + i + "]";
+	   input.name = "cbrain_task[params][batch_file_ids][" + i + "]";
 	   input.value = selection.options[i].value;
-           document.getElementById("spmbatch").appendChild(input);
+           document.getElementById("spmbatch_created_inputs").appendChild(input);
 	}
 }
 
@@ -140,4 +140,6 @@ function selectAllOptions(selection)
         <%= submit_tag 'Update Spmbatch', :onclick => "selectAllOptions(this.form.batchs_out);" %>
       <% end %>
       </center>
+
+      <div id="spmbatch_created_inputs"></div>
 
