Major cleanup of the user interface.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@1311 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

Former-commit-id: 616377f4a56054940380ab5b362ffd7fe3d05342

--- a/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
@@ -49,7 +49,7 @@ function selectAllOptions(selection)
 //-->
 </script>
 
-  <table class=userfiles>
+  <table class="simple">
   <tr>
   <td><h2>SPM Batch Task</h2></td>
   </tr>
@@ -61,7 +61,7 @@ function selectAllOptions(selection)
 
      <h3>Choose Batchs to submit</h3>
 
-	 <table class="userfiles">
+	 <table class="simple">
 	 <tr>
 		<td></td>
 		<td></td>
@@ -88,13 +88,13 @@ function selectAllOptions(selection)
          </table> 
 
 
-     <table class="userfiles">
+     <table class="simple">
        <tr> 
            <th>Control Options</th>
        </tr>
        <tr>
          <td> 
-	       <table  border="0" class="userfiles">
+	       <table class="simple">
 		         <td>
 			        <%= render :partial => "tasks/cbrain_task/spmbatch_validate_note" %>
 	             </td>
