Improvedment in sites/projects links.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@1383 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

Former-commit-id: 52af019e4da7073d984a3ff39a79190cefef9ad2

--- a/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_spmbatch.html.erb
@@ -1,4 +1,5 @@
 
+
 <script language="JavaScript" type="text/javascript">
 <!--
 
@@ -66,7 +67,8 @@ function selectAllOptions(selection)
 	 </tr>
 	 <tr>
 	 <td>
-	 <select name="batchs_in" size="6" <%= options_for_select(params[:batch_files].map{|p| [p.name,p.id]}) %>></select>
+	 <select name="batchs_in" size="6"><%= options_for_select(params[:batch_files].map{|p| [p.name,p.id]}) %>
+         </select>
 	 </td>
 	 <td>
 	 <input type="button" value="=>" 
