Changed routing for tasks to use restful routes.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@1752 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

Former-commit-id: d74196a5b8a0a45b7740af6f684fda57bb4ac8cd

--- a/BrainPortal/app/views/tasks/show_params/_spmbatch.html.erb
+++ b/BrainPortal/app/views/tasks/show_params/_spmbatch.html.erb
@@ -12,5 +12,5 @@ Collection file: <% if params[:file_args] && params[:file_args]["0"] %>
 <P>
 SPMBatch result collection: <%= link_to_userfile_if_accessible params[:spmbatchresult_id] %>
 <P>
-See this task's <%= link_to "edit page", "/tasks/edit/#{task.id}" %> for more information.
+See this task's <%= link_to "edit page", edit_task_path(task) %> for more information.
 
