PSOM pipeline launcher improvements. It's possible to configure whether or not the meta graph will be generated. Serialized task are setup and submitted as they are grouped (except for the first one), which allows us to keep the prerequisites. The batch view order has been improved. Overall code cleanup.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@1940 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

Former-commit-id: a185ce531fe4e25c1056d1dc043cde686d18dc70

--- a/BrainPortal/app/views/tasks/cbrain_task/_niak_pipeline_fmri_preprocess.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_niak_pipeline_fmri_preprocess.html.erb
@@ -27,6 +27,11 @@
   <br/>
   <%= form.params_label(:size_output, "Desired output:") %>
   <%= form.params_select :size_output, [ 'all', 'quality_control' ] %>
+  <br/>
+  <%= form.params_label(:generate_meta_graph, "Generate CBRAIN Parallelizers and Serializers too? ") %>
+  <%= form.params_check_box :generate_meta_graph, {}, "1", "0" %>
+  <br/>
+  <small>(This is an advanced option that should be turned off for debugging only)</small>
 </fieldset>
 
 
