--- a/BrainPortal/app/views/tasks/cbrain_task/_niak_pipeline_fmri_preprocess.html.erb
+++ b/BrainPortal/app/views/tasks/cbrain_task/_niak_pipeline_fmri_preprocess.html.erb
@@ -25,13 +25,13 @@
   <%= form.params_label(:output_name, "Name of output:") %>
   <%= form.params_text_field :output_name %>
   <br/>
-  <%= form.params_label(:size_output, "Desired output:") %>
+  <%= form.params_label(:size_output, "Type of output:") %>
   <%= form.params_select :size_output, [ 'all', 'quality_control' ] %>
   <br/>
   <%= form.params_label(:generate_meta_graph, "Generate CBRAIN Parallelizers and Serializers too? ") %>
   <%= form.params_check_box :generate_meta_graph, {}, "1", "0" %>
   <br/>
-  <small>(This is an advanced option that should be turned off for debugging only)</small>
+  <small>(This is an advanced option that should only be turned off for debugging)</small>
 </fieldset>
 
 
@@ -51,7 +51,7 @@
   <%= form.params_label('slice_timing[type_scanner]', "Type of scanner:") %>
   <%= form.params_text_field 'slice_timing[type_scanner]' %>
   <br/>
-  <%= form.params_label('slice_timing[delay_in_tr]', "{delay_in_tr}") %>
+  <%= form.params_label('slice_timing[delay_in_tr]', "Delay in TR:") %>
   <%= form.params_text_field 'slice_timing[delay_in_tr]', :size => 5 %>
 </fieldset>
   
@@ -63,10 +63,10 @@
     <%= form.params_check_box 'motion_correction[flag_skip]', {}, "0", "1" %>
   </legend>
 
-  <%= form.params_label('motion_correction[suppress_vol]', "{suppress_vol}") %>
+  <%= form.params_label('motion_correction[suppress_vol]', "Suppress volumes:") %>
   <%= form.params_text_field 'motion_correction[suppress_vol]', :size => 5 %>
   <br/>
-  <%= form.params_label('motion_correction[session_ref]', "{session_ref}") %>
+  <%= form.params_label('motion_correction[session_ref]', "Session reference:") %>
   <%= form.params_text_field 'motion_correction[session_ref]' %>
 </fieldset>
 
@@ -75,7 +75,7 @@
 <fieldset>
   <legend>T1 Preprocessing</legend>
 
-  <%= form.params_label('t1_preprocess[nu_correct][distance]', "{nu correct distance}") %>
+  <%= form.params_label('t1_preprocess[nu_correct][distance]', "NU Correct distance:") %>
   <%= form.params_text_field 't1_preprocess[nu_correct][distance]', :size => 5 %>
 </fieldset>
 
@@ -84,7 +84,7 @@
 <fieldset>
   <legend>Anat2Func</legend>
 
-  <%= form.params_label('anat2func[init]', "{init}") %>
+  <%= form.params_label('anat2func[init]', "Init:") %>
   <%= form.params_select 'anat2func[init]', [ 'identity', 'center' ] %>
 </fieldset>
 
@@ -93,10 +93,10 @@
 <fieldset>
   <legend>Time Filter</legend>
 
-  <%= form.params_label('time_filter[init]', "{hp}") %>
+  <%= form.params_label('time_filter[init]', "High pass:") %>
   <%= form.params_text_field 'time_filter[hp]', :size => 5 %>
   <br/>
-  <%= form.params_label('time_filter[init]', "{lp}") %>
+  <%= form.params_label('time_filter[init]', "Low pass:") %>
   <%= form.params_text_field 'time_filter[lp]', :size => 5 %>
 </fieldset>
 
@@ -108,10 +108,10 @@
     <%= form.params_check_box 'corsica[flag_skip]', {}, "0", "1" %>
   </legend>
 
-  <%= form.params_label('corsica[sica][nb_comp]', "{sica nb_comp}") %>
+  <%= form.params_label('corsica[sica][nb_comp]', "Number of components:") %>
   <%= form.params_text_field 'corsica[sica][nb_comp]', :size => 5 %>
   <br/>
-  <%= form.params_label('corsica[threshold]', "{threshold}") %>
+  <%= form.params_label('corsica[threshold]', "Threshold:") %>
   <%= form.params_text_field 'corsica[threshold]', :size => 5 %>
 </fieldset>
 
@@ -123,10 +123,10 @@
     <%= form.params_check_box 'resample_vol[flag_skip]', {}, "0", "1" %>
   </legend>
 
-  <%= form.params_label('resample_vol[interpolation]', "{interpolation}") %>
-  <%= form.params_select 'resample_vol[interpolation]', [ 'sinc', 'tricubic' ]  %>
+  <%= form.params_label('resample_vol[interpolation]', "Interpolation:") %>
+  <%= form.params_select 'resample_vol[interpolation]', [ 'trilinear', 'sinc', 'tricubic' ]  %>
   <br/>
-  <%= form.params_label('resample_vol[voxel_size]', "{voxel_size}") %>
+  <%= form.params_label('resample_vol[voxel_size]', "Voxel size:") %>
   <%= form.params_text_field 'resample_vol[voxel_size]', :size => 5 %>
 </fieldset>
 
@@ -138,7 +138,7 @@
     <%= form.params_check_box 'smooth_vol[flag_skip]', {}, "0", "1" %>
   </legend>
 
-  <%= form.params_label('smooth_vol[fwhm]', "{fwhm}") %>
+  <%= form.params_label('smooth_vol[fwhm]', "FWHM:") %>
   <%= form.params_text_field 'smooth_vol[fwhm]', :size => 5 %>
 </fieldset>
 
