Added Adhd200 model for fMRI studies. Adjusted PsomPipelineLauncher to 'escape' identifiers.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@1997 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

Former-commit-id: a6938be89868b4adb1926cf3c5f4fe16d399bcdf

--- a/BrainPortal/cbrain_plugins/cbrain_task/niak_pipeline_fmri_preprocess/bourreau/niak_pipeline_fmri_preprocess.xml.erb
+++ b/BrainPortal/cbrain_plugins/cbrain_task/niak_pipeline_fmri_preprocess/bourreau/niak_pipeline_fmri_preprocess.xml.erb
@@ -14,7 +14,7 @@
     anat_paths = fmri_study.list_anat_files(:subjects => subject)
 %>
     <subject>
-      <name>"<%= x(subject) %>"</name>
+      <name>"<%= x(sane_id(subject)) %>"</name>
       <anat>"<%= x("#{full_path}/#{anat_paths[0]}") %>"</anat>
       <fmri>
 <%
@@ -23,7 +23,7 @@
         scan_paths = fmri_study.list_scan_files(:subjects => subject, :sessions => session)
 %>
         <session>
-          <name>"<%= x(session) %>"</name>
+          <name>"<%= x(sane_id(session)) %>"</name>
 <%        scan_paths.each do |scan| %>
           <path>"<%= x("#{full_path}/#{scan}") %>"</path>
 <%        end %>
