New handling of encodings for :text fields.
Former-commit-id: 2d122d2ba1b49b3f19cce1ac13a86c00683df3ce

--- a/BrainPortal/cbrain_plugins/cbrain_task/niak_pipeline_fmri_preprocess/bourreau/niak_pipeline_fmri_preprocess.xml.erb
+++ b/BrainPortal/cbrain_plugins/cbrain_task/niak_pipeline_fmri_preprocess/bourreau/niak_pipeline_fmri_preprocess.xml.erb
@@ -59,7 +59,7 @@
   </files_in>
 
   <opt>
-    <folder_out>"<%= x("#{task.full_cluster_workdir}/psom_pipeline") %>"</folder_out>
+    <folder_out>"<%= x("#{task.full_cluster_workdir}/#{task.pipeline_run_dir}") %>"</folder_out>
     <size_output>"<%= x(params[:size_output]) %>"</size_output><!-- 'all' or 'quality_control' -->
 
     <slice_timing>
