--- a/BrainPortal/cbrain_plugins/cbrain_task/spmbatch/views/_spmbatch_validate_note.html.erb
+++ b/BrainPortal/cbrain_plugins/cbrain_task/spmbatch/views/_spmbatch_validate_note.html.erb
@@ -1,3 +1,27 @@
+
+<%-
+#
+# CBRAIN Project
+#
+# Copyright (C) 2008-2012
+# The Royal Institution for the Advancement of Learning
+# McGill University
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.  
+#
+-%>
+
 <div class="alone_per_line">
   <%= show_hide_toggle "Do not validate the dataset?:", "#infobox_validate", :alternate_text  => "Close this note", :class  => "action_link" %>
 </div>
@@ -16,3 +40,4 @@
    So this options should be use carefully<br>
 
 </div> <!-- End class="infobox" -->
+
