Adjusted old code for new CbrainFileRev methods

--- a/cbrain_task/niak_pipeline_fmri_preprocess/bourreau/niak_pipeline_fmri_preprocess.xml.erb
+++ b/cbrain_task/niak_pipeline_fmri_preprocess/bourreau/niak_pipeline_fmri_preprocess.xml.erb
@@ -21,7 +21,7 @@
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.  
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 %>
 
@@ -29,7 +29,7 @@
    full_path   = fmri_study.cache_full_path
    session_ref = params[:motion_correction][:session_ref]
 %>
-  <!-- XML generated automatically by <%= self.class.to_s %> in <%= self.revision_info.svn_id_pretty_file_rev_author_date %> -->
+  <!-- XML generated automatically by <%= self.class.to_s %> in <%= self.revision_info.format("%f %s %a %d") %> -->
 
   <files_in>
 
